Bump upstream versions
Adopt:
- odlparent-10.0.0
- infrautils-3.0.0
- yangtools-8.0.2
- mdsal-9.0.1
- controller-5.0.1
- aaa-0.15.1
- netconf-3.0.0

Also adjust for leaf-list mapping changing by switching to
ImmutableSets, which retain iteration order.

Change-Id: Ib184e4bfd162755788c2e8185a71a25a8eb49af0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>